--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -3,3 +3,9 @@ date.timezone = "Asia/Tokyo"
 [mbstring]
 mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
+
+file_uploads = On
+upload_max_filesize = 10M
+post_max_size = 12M
+memory_limit = 128M
+max_file_uploads = 20
